<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Level Counter</string>
    <string name="action_settings">Settings</string>
    <string name="main_screen_Players">Players</string>
    <string name="main_screen_Stats">Statistics</string>
    <string name="main_screen_Settings">Settings</string>
    <string name="main_screen_About">About</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_newPlayers">Players</string>
    <string name="title_dialog_choose_helper_ok">Choose</string>
    <string name="title_dialog_choose_helper_cancel">Cancel</string>
    <string name="title_dialog_choose_helper_remove">Remove</string>
    <string name="title_dialog_continue">Congratulations!</string>
    <string name="title_dialog_confirm">Are you sure?</string>
    <string name="txt_max_lvl">Max Level</string>
    <string name="dialog_ok_btn">OK</string>
    <string name="dialog_cancel_btn">Cancel</string>
    <string name="total_power">Power</string>
    <string name="level">Level</string>
    <string name="gear">Gear</string>
    <string name="game_screen">Level Counter</string>
    <string name="total">Total</string>
    <string name="no_players">Please add more players.</string>
    <string name="message_for_dialog_cont">You won! Continue or quit?</string>
    <string name="message_for_dialog_confirm">You will lose your progress!</string>
    <string name="message_for_dialog_battle_leave">Cancel battle?</string>
    <string name="ok_btn_dialog_battle_leave">Yes</string>
    <string name="cancel_btn_dialog_battle_leave">No, stay</string>
    <string name="ok_btn_for_dialog_confirm">Stay</string>
    <string name="cancel_btn_for_dialog_confirm">Exit</string>
    <string name="ok_btn_for_dialog_cont">Continue</string>
    <string name="cancel_btn_for_dialog_cont">Quit</string>
    <string name="lvl_tab">Level</string>
    <string name="gear_tab">Gear</string>
    <string name="power_tab">Power</string>
    <string name="winner">Winner</string>
    <string name="loser">Loser</string>
    <string name="developed">Developed by:</string>
    <string name="AG">Artem Gulia</string>
    <string name="about_the_app">Level counter for the popular card game Munchkin. With statistics!</string>
    <string name="rate">If you like the app, please rate it! </string>
    <string name="btn_rate">Rate</string>
    <string name="thanks">Also, you can buy me a beer: </string>
    <string name="donate_0.99">One bottle: $0.99</string>
    <string name="donate_1.99">Good beer: $1.99</string>
    <string name="donate_3.99">Excellent beer: $3.99</string>
    <string name="donate_9.99">A case of beer: $9.99</string>
    <string name="list_players_Edit">Edit</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="error_max_lvl_settings">Error setting max level.</string>
    <string name="error_max_level_one">Max level must be greater than 1.</string>
    <string name="dice">Dice</string>
    <string name="action_start_battle">Fight</string>
    <string name="run_away_success">Success! Remember to check modifiers!</string>
    <string name="run_away_fail">Failure! Remember to check modifiers!</string>
    <string name="more_players">Please add more players.</string>
    <string name="error_next_turn">Error starting next turn.</string>
    <string name="no_data">Statistics unavailable, please play a game to generate them.</string>
    <string name="prev_stas">These statistics are from a previous game.</string>
    <string name="contact">Have questions? You can always contact me:</string>
    <string name="btnNextPlayer">Next Player</string>
    <string name="msg_finish_game">End the current game?</string>
    <string name="title_dialog_finish">End Game</string>
    <string name="ok_btn_for_dialog_finish">Yes</string>
    <string name="cancel_btn_for_dialog_finish">Stay</string>
    <string name="action_finish">End Game</string>
    <string name="enter_player_name">Enter player\'s name</string>
    <string name="mods">Mods</string>
    <string name="warrior">Warrior</string>
    <string name="monster">Monster</string>
    <string name="battle_screen">Battle</string>
    <string name="treasures">Treasures</string>
    <string name="ok_btn_dialog_battle_continue">Continue</string>
    <string name="cancel_btn_for_dialog_battle">Cancel</string>
    <string name="battle_dialog_msg">You beat the monster! Don\'t forget to level up!</string>
    <string name="battle_dialog_title_win">Victory!</string>
    <string name="battle_dialog_title_lose">Defeat!</string>
    <string name="battle_dialog_msg_lose">You lost! Maybe it\'s better to run away?</string>
    <string name="battle_dialog_lose_run_away">Save me!</string>
    <string name="battle_dialog_lose_anyway">Warriors do not run!</string>
    <string name="battle_dialog_title_run">Run away!</string>
    <string name="battle_dialog_msg_run">Run carefully—you can die.</string>
    <string name="battle_dialog_run_confirm">Run!</string>
    <string name="battle_dialog_run_cancel">Stay and fight!</string>
    <string name="helper_power_value" translatable="false">+%1$d</string>
    <string name="stats_screen_save">Save stats to file</string>
    <string name="save_stats_file_name">Level_Counter_%1d</string>
    <string name="save_stats_result">Stats have been saved to gallery</string>
    <string name="save_stats_fail">Saving failed</string>
    <string name="helper_info_template">Power:%1$d %2$s LVL:%3$d</string>
    <string name="open_gallery">Show</string>
    <string name="app_save_folder" translatable="false">Level Counter Stats</string>
    <string name="pref_application_settings_title">Application Settings</string>
    <string name="pref_screen_on_title">Screen on</string>
    <string name="pref_game_settings_title">Game Settings</string>
    <string name="pref_max_level">Max Level</string>
    <string name="pref_screen_on_summary">Keep Screen on during the Game</string>
    <string name="font_path">fonts/Quasimodo_Original.ttf</string>
    <string name="theme_font_path">Quasimodo_Original.ttf</string>
    <string name="choose_player_color">Choose color</string>
    <string name="dialog_back_btn">Back</string>
    <string name="single_mode">Lone Munchkin Mode</string>
    <string name="game_master">Game Master Mode</string>
    <string name="player_name">Player</string>
    <string name="gender">Gender</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="add_player">Add player</string>

</resources>
