<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_application_settings_title">

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_screen_on"
            android:summary="@string/pref_screen_on_summary"
            android:title="@string/pref_screen_on_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_game_settings_title">

        <com.g_art.munchkinlevelcounter.util.MaxLevelDialogPreference
            android:dialogLayout="@layout/maxlvl_dialog"
            android:key="pref_max_lvl"
            android:selectAllOnFocus="true"
            android:title="@string/pref_max_level"/>
    </PreferenceCategory>
</PreferenceScreen>